fix fbtn-ori and fbtn-sub alignment issue

--- a/assets/sass/components/_button-float.scss
+++ b/assets/sass/components/_button-float.scss
@@ -107,11 +107,10 @@
 	align-items: center;
 	display: flex;
 	height: 100%;
-	justify-content: center;
+	margin-left: -0.5em;
 	position: absolute;
 		top: 0;
-		left: 0;
-	width: 100%;
+		left: 50%;
 	transition-duration: 0.3s;
 	transition-property: opacity, transform;
 	transition-timing-function: $timing;
