--- a/css/base.css
+++ b/css/base.css
@@ -2631,14 +2631,10 @@ template,
   display: -ms-flexbox;
   display: flex;
   height: 100%;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  margin-left: -0.5em;
   position: absolute;
   top: 0;
-  left: 0;
-  width: 100%;
+  left: 50%;
   -webkit-transition-duration: 0.3s;
           transition-duration: 0.3s;
   -webkit-transition-property: opacity, -webkit-transform;
